# soulride-sdl2-gles2

./: .gitignore  CMakeLists.txt  README.md
.claude/: launch.json
.github/workflows/: deploy-web.yml
build-web/: CMakeCache.txt  Makefile  cmake_install.cmake  soulride.html  soulride.js  soulride.wasm
data/Breckenridge/: Finish.psd  Freeway 2d.PSD  LIFT.SRM  RED.PSD  REDCROSS.PSD  Rider-Arm.psd  Rider-Head.psd  Rider-jacket.psd  billboard.PSD  billboard.SRM  burn.PSD  burn.SRM  cimarron.PSD  cimarron.SRM  contest.PSD  contest.srm  evergreen.psd  freeway.PSD  freeway.SRM  horseshoe.PSD  horseshoe.SRM  inferno.PSD  inferno.SRM  postload.lua  preload.lua  sign-right.SRM  sign-right.psd  smallbldg.SRM  spruce.PSD  spruce.SRM  tallbldg.srm  whalestail.PSD  whalestail.SRM
data/Jay_Peak/: Apple Tree.psd  BLUE.PSD  JAY_finish.psd  Lift.psd  New Lift Building.SRM  REDGATE.SRM  ROOF.PSD  Rider-Board.PSD  Rider-jacket columbia.psd  Salomon-Board.PSD  Salomon-bottom.PSD  angelswig.PSD  angelswig.SRM  bldplain.psd  columbia finish.PSD  columbia finish.SRM  columbia sign.PSD  columbia sign.SRM  convert sign orig.PSD  convert sign.PSD  convert sign.SRM  everglade.PSD  everglade.SRM  fence.SRM  finish.psd  jay_base.SRM  jay_ldg_win.PSD  jay_siding.PSD  jay_top.SRM  jay_wall.PSD  jay_wall2.PSD  jay_wall3.PSD  jay_win.PSD  jay_window.PSD  jaydeck.SRM  jaylogo.PSD  lifthouse.SRM  maple.psd  maple3.psd  metal.psd  (+20 more)
data/Stratton/: BLDAPT.PSD  BLDAPT.SRM  BLUEGATE.SRM  Diner_Siding.psd  Diner_Window.PSD  GRAY.PSD  LIFTWIN.PSD  Metal2.psd  Octogon.SRM  Octogon_door.PSD  PolarBear.SRM  Poma Blue.psd  ROOF.PSD  SAND.PSD  Shed_wood.psd  Snowcross Gate.SRM  Stratton Lodge.SRM  Stratton Red.psd  Stratton Shed.SRM  Stratton Sm Ldg.SRM  Stratton Tower.SRM  SunBowl Lodge.SRM  TowerClock.psd  TowerHang.PSD  TowerRoof.PSD  TowerSide.psd  WOOD.PSD  banner.psd  brownrock.PSD  diner.SRM  finish.psd  hemlock.psd  hibrn8.PSD  lamp_post.SRM  maple2.psd  moondance.SRM  moondance.psd  polarbear.PSD  preload.lua  rider-jacket.psd  (+7 more)
data/music/: README.txt
src/: console.cpp  game.cpp  gameloop.cpp  linuxmain.cpp  linuxsound.cpp  ogl.hpp  oglrender.cpp  sound.hpp  srgl.cpp  srgl.hpp  timer.cpp  utility.hpp
src/gamegui/: gg_actor.cpp  gg_actor.h  gg_audio.h  gg_font_impl.h  gg_resource.h  gg_script.cpp
web/: prejs.js  shell.html
